--- a/module/Users/view/users/user-manager/index.phtml
+++ b/module/Users/view/users/user-manager/index.phtml
@@ -1,3 +1,3 @@
 <?php
- echo $this->headScript()->appendFile($this->baseUrl.'../js/func.js');
+ //echo $this->headScript()->appendFile($this->baseUrl.'../js/func.js');
  ?>
